after correction the dark mode of sliding navs

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -329,6 +329,15 @@ button.green {
 .black {
 	background-color: black;
 
+	ul.sub {
+		background-color: black !important;
+		li {
+			a {
+				color: white;
+			}
+		}
+	}
+
 	header {
 		.buttons {
 			button {
